--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "src/ondewo-nlu-api"]
 	path = src/ondewo-nlu-api
-	url = https://github.com/ondewo/ondewo-nlu-api
+	url = https://github.com/ondewo/ondewo-nlu-api.git
+	branch = release/1.1.1
