--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
 	"name": "@ondewo/nlu-client-nodejs",
 	"version": "5.0.0",
-	"description": "ONDEWO Natural Language Understanding (NLU) Platfrom client library for Nodejs",
+	"description": "ONDEWO Natural Language Understanding (NLU) Platform client library for Nodejs",
 	"main": "public-api.js",
 	"typings": "public-api.d.ts",
 	"author": "ONDEWO GmbH <office@ondewo.com>",
 	"license": "Apache-2.0",
 	"dependencies": {
-		"@grpc/grpc-js": "^1.6.10",
-		"@types/node": "^18.7.13",
-		"dotenv": "^16.0.1",
-		"google-protobuf": "^3.15.5"
+		"@grpc/grpc-js": "^1.10.6",
+		"@types/node": "^18.18.0",
+		"dotenv": "^16.4.5",
+		"google-protobuf": "^3.21.2"
 	},
 	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^7.0.1",
-		"eslint": "^8.56.0",
+		"@typescript-eslint/eslint-plugin": "^7.7.0",
+		"eslint": "^8.57.0",
 		"husky": "^9.0.11",
 		"prettier": "^3.2.5"
 	}
