--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# release automation
+ondewo-devops-accounts
+
 *.env
 .code
 .idea
@@ -5,4 +8,4 @@
 node_modules
 npm
 tmp
-ondewo-devops-accounts
+
